# vacation-planner

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
config/: logging_utils.py  middleware.py  otel.py  otel_config.py  pwa_views.py  settings.py  urls.py
documents/setup/: roadmap.md
k8s/: backup-pvc.yaml  cronjob-backup.yaml  deployment.yaml  s3-secrets.yaml  secrets.yaml
planner/: admin.py  forms.py  models.py  urls.py  views.py
planner/migrations/: 0001_initial.py  0002_vacation_car_rental_actual_and_more.py  0003_vacation_rating.py  0004_remove_location_rating_add_expense_notes.py  0005_vacationsavings.py  0006_vacationsavings_monthly_contribution.py  0007_vacation_shared_with.py  0008_family_link.py  0009_journal_photos.py  0010_journal_entries.py
static/: sw.js
static/css/: site.css
static/js/: offline-queue.js
templates/: base.html  offline.html
templates/account/: login.html  signup.html
templates/planner/: confirm_delete.html  dashboard.html  day_form.html  day_journal.html  expense_form.html  vacation_detail.html  vacation_form.html  vacation_recap.html
