[project]
name = "vacation-planner"
version = "0.1.0"
description = "Private per-user vacation planning and expense tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-environ>=0.12.0",
    "gunicorn>=20.1",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "whitenoise>=6.11.0",
    "django-storages[s3]>=1.14.6",
    "boto3>=1.43.6",
]
